# End-to-End-ML-project

./: .gitignore  Dockerfile  README.md  app.py  application.py  pyproject.toml  setup.py
.ebextensions/: 01_generate_requirements.config
Notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
Notebook/catboost_info/: catboost_training.json  time_left.tsv
Notebook/catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py  train_pipeline.py
templates/: index.html  predict.html
